[package]
name = "funutd"
description = "Procedural texture library."
keywords = ["graphics", "noise", "texture"]
license = "MIT OR Apache-2.0"
version = "0.12.1"
authors = ["SamiPerttu <Sami.Perttu@gmail.com>"]
homepage = "https://github.com/SamiPerttu/funutd"
repository = "https://github.com/SamiPerttu/funutd"
readme = "README.md"
edition = "2021"

[dependencies]
glam = "0.24.0"
dyn-clone = "1.0.11"

[dev-dependencies]
pixels = "0.12.1"
winit = "0.28.6"
winit_input_helper = "0.14.1"
egui = "0.22.0"
eframe = "0.22.0"
rayon = "1.7.0"
arboard = "3.2.0"
rfd = "0.11.4"
png = "0.17.8"

[[example]]
name = "pixel"
path = "examples/pixel.rs"

[[example]]
name = "editor"
path = "examples/editor.rs"
