[package]
name = "funutd"
description = "Procedural texture library."
keywords = ["graphics", "noise", "texture"]
license = "MIT OR Apache-2.0"
version = "0.14.0"
authors = ["SamiPerttu <Sami.Perttu@gmail.com>"]
homepage = "https://github.com/SamiPerttu/funutd"
repository = "https://github.com/SamiPerttu/funutd"
readme = "README.md"
edition = "2021"

[dependencies]
glam = "0.25.0"
dyn-clone = "1.0.16"

[dev-dependencies]
winit = "0.29.9"
winit_input_helper = "0.15.1"
eframe = { version = "0.25.0", default-features = false, features = ["default_fonts", "wgpu"] }
rayon = "1.8.0"
rfd = "0.12.1"
png = "0.17.10"

[[example]]
name = "editor"
path = "examples/editor.rs"
